
# add here all files
data_DATA = kppp.html kppp-1.html kppp-2.html kppp-3.html \
	    kppp-4.html kppp-5.html kppp-6.html kppp-7.html \
	    kppp-8.html kppp-9.html kppp-10.html hayes.html

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_htmldir)/en/kppp

