# add here all files
pkg_DATA = kppp.html kppp-1.html kppp-2.html kppp-3.html \
	   kppp-4.html kppp-5.html kppp-6.html kppp-7.html \
	   kppp-8.html kppp-9.html kppp-10.html \
	   kppp-11.html \
	   kppp-12.html \
	   kppp-13.html \
	   kppp-14.html \
	   kppp-15.html \
	   kppp-16.html \
	   kppp-17.html \
	   kppp-18.html \
	   hayes.html logotp3.gif  

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
pkgdir = $(kde_htmldir)/en/kppp

EXTRA_DIST = $(pkg_DATA)

install-data-local:
	ln -sf $(kde_htmldir)/en/kppp/kppp.html \
	       $(kde_htmldir)/en/kppp/index.html
