add_subdirectory(toolbar)

install_icon(closed.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(feather_white.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(green-bullet.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kdelogo.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmfldin.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmfldout.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmfldsent.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmfolder.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kminsorgmsg.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgdel.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgforwarded.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgnew.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgold.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgqueued.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgreplied.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgsent.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmmsgunseen.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(kmtrash.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(pgp-keys.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(pub_key_red.xpm "${KDE1_DATADIR}/kmail/pics")
install_icon(red-bullet.xpm "${KDE1_DATADIR}/kmail/pics")
