SUBDIRS = Argentina Austria Brasil Czechia England France Germany Greece \
	HongKong Hungary Italy Jamaica Japan Netherlands Norway Poland \
	Portugal Romania Slovakia SouthAfrika Spain Sweden Switzerland \
	Belgium Croatia

pkg_DATA = TEMPLATE checkrules

pkgdir = $(kde_datadir)/kppp/Rules

EXTRA_DIST = $(pkg_DATA)
