SUBDIRS = Argentina Austria Belgium Brasil Croatia Czechia England France \
	Germany Greece HongKong Hungary Italy Jamaica Japan Kazakhstan \
	Netherlands Norway Poland Portugal Romania Slovakia SouthAfrika \
	Spain Sweden Switzerland Malaysia

pkg_DATA = TEMPLATE 
pkg_SCRIPTS = checkrules

pkgdir = $(kde_datadir)/kppp/Rules

EXTRA_DIST = $(pkg_DATA)
